--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir
-        run: echo "YARN_CACHE_DIR=$(yarn cache dir)" >> $GITHUB_ENV
+      - name: Get npm cache directory path
+        id: npm-cache-dir
+        run: echo "NPM_CACHE_DIR=$(npm config get cache)" >> $GITHUB_ENV
 
-      - name: Cache node_modules and Yarn cache
+      - name: Cache node_modules and npm cache
         uses: actions/cache@v4
         with:
           path: |
             node_modules
-            ${{ env.YARN_CACHE_DIR }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+            ${{ env.NPM_CACHE_DIR }}
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
-        run: yarn install
+        run: npm install
