--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           path: |
             node_modules
             ${{ env.NPM_CACHE_DIR }}
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          key: test-cache-v0
 
       - name: Install dependencies
         run: npm install
